Fix toc elements from overflowing on longer section names

--- a/src/main/content/_assets/css/table-of-contents.css
+++ b/src/main/content/_assets/css/table-of-contents.css
@@ -110,6 +110,7 @@
     min-height: 30px;
     border-left: 8px solid transparent;
     padding-left: 19px;
+    padding-right: 19px;
     word-wrap: break-word;
 }
 
@@ -335,8 +336,8 @@
 
     #toc_column {
         float: left;
-        position: relative;
         left: 0;
+        position: relative;
         padding-bottom: 22px;
         background-color: white;
         z-index: 0;
@@ -345,5 +346,9 @@
     
     #toc_column.inline {
         display: inline-block;
+    }
+
+    #toc_inner {
+        width: inherit;
     }
 }
